--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -14,9 +14,19 @@
               <ul class="list-group">
                   <li class ="list-group-item" *ngIf="profile.bio">{{profile.bio}}</li>
                   <li class ="list-group-item" *ngIf="profile.hirable">Available for hire</li>
-                 <li class ="list-group-item" *ngIf="profile.blog"><a href="{{profile.blog}}" target="" {{profile.blog}}</li>
-                  <li class ="list-group-item" *ngIf="profile.email">{{profile.email}}</li>
+                 <li class ="list-group-item" *ngIf="profile.blog"><a href="{{profile.blog}}" target="blank"></a> {{profile.blog}}</li>
+                  <li class ="list-group-item" *ngIf="profile.email"><a href="emailto:{{profile.email}}"></a> {{profile.email}}</li>
               </ul> 
+           </div>
+           <div class="col-sm-4">
+               <div>
+                   <p>
+                       <span class="label label-default"> {{profile.followers}}followers</span>
+                       <span class="label label-default">Following {{profile.followings}}</span>
+                       <span class="label label-default"> {{profile.}}followers</span>
+                       <span class="label label-default"> {{profile.followers}}followers</span>
+                   </p>
+               </div>
            </div>
         </div>
     </div>
