--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,11 +1,8 @@
-<!-- <link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Pacifico|Yeon+Sung&display=swap" rel="stylesheet">
-<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
-<form action="" class="search-form">
-        <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search git users with username" [(ngModel)]="username" name="username" (keyup)="findProfile()">
-        </div>
-    </form> -->
+<form actions="">
+    <div class="form-group">
+        <input type="text" class="form-control" placeholder="search git users with username">
+    </div>
+</form>
     <div *ngIf="profile">
         <div class="panel panel-default">
             <div class="panel-heading">
