--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,4 +1,4 @@
-<form actions="">
+<form action="search-form">
     <div class="form-group">
         <input type="text" class="form-control" placeholder="search git users with username">
     </div>
