--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,6 +1,6 @@
 <form action="search-form">
     <div class="form-group">
-        <input type="text" class="form-control" placeholder="search git users with username">
+        <input type="text" class="form-control" placeholder="search git users with username" [(ngModel)]="username" name="username">
     </div>
 </form>
     <div *ngIf="profile">
