--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,6 +1,6 @@
-<form action="search-form">
+<form action="" class="enter">
     <div class="form-group">
-        <input type="text" class="form-control" placeholder="search git users with username" [(ngModel)]="username" name="username" (keyup="findProfile")>
+        <input type="text" placeholder="enter username here...." class="form-control"  [(ngModel)]="username" name="username" (keyup)="findProfile()">
     </div>
 </form>
     <div *ngIf="profile">
@@ -14,14 +14,15 @@
                 <div class="row">
                     <div class="col-sm-3">
                         <img src="{{profile.avatar_url}}" class="img-circle img-responsive" alt="Profile Image">
-                    </div>
-                    <div class="col-sm-5">
-                        <ul class="list-group">
+                                                <ul class="list-group">
                             <li class="list-group-item" *ngIf="profile.bio">{{profile.bio}}</li>
                             <li class="list-group-item" *ngIf="profile.hireable">Available for hire</li>
                             <li class="list-group-item" *ngIf="profile.blog"><a href="{{profile.blog}}" target="_blank">{{profile.blog}}</a></li>
                             <li class="list-group-item" *ngIf="profile.email"><a href="emailto:{{profile.email}}">{{profile.email}}</a></li>
                         </ul>
+                    </div>
+                    <div class="col-sm-5">
+
                     </div>
                     <div class="col-sm-4">
                         <div>
